Release notes
=============

trunk
-------

  * tcsh setup scrtip added
  * improved parameter and localparameter support
  * complex expresions are accepted in the module instantiation 
  * support for compiler directives
  * module slicing added
  * testbench generator added (tbg)

0.1.1
-------

  * minor bug fixes
  * support for ``reg`` and ``wire`` keywords in input/output declaration
  * library names added to configuration file


0.1.0
-------

  * Initial revision

