@@ -33,13 +33,15 @@ sdc_headers = false
 # file name of sdc file (if empty, SDC file will have the same name as top module)
 sdc_file_name = 
 
-#global triplication settings
+# Should information header be added to each TMR file?
+add_header = True
 
 # file list to be processed (space separated)
 files =
 # libs list to be processed (space separated)
 libs =
 
+#global triplication settings
 [global]
 default    : triplicate
 tmr_error  : false
