@@ -11,6 +11,12 @@ import copy
 import ConfigParser
 from verilogElaborator import *
 from toolset import *
+import subprocess
+import getpass
+import socket
+import time
+import datetime
+import hashlib
 
 class CmdConstrainParser:
     def __init__(self):
@@ -1350,6 +1356,125 @@ class TMR(VerilogElaborator):
             f.write(readFile(ffile))
         f.close()
 
+    def getHeader(self,fname,fout):
+        HLEN=100
+        header="/"+("*"*HLEN)+"\n"
+        def runCommand(cmd):
+            p = subprocess.Popen(cmd.split(), stdout=subprocess.PIPE, stderr=subprocess.PIPE)
+            out, err = p.communicate()
+            return out,err
+
+        def getSvnInfo(fname):
+            out,err=runCommand("svn info %s"%fname)
+            if len(err) >0:
+                return False,""
+            return True,out
+
+        def getSosInfo(fname):
+            out,err=runCommand('soscmd status -f%%T\\t%%S\\t%%C\\t%%N\\t%%R\\t%%L\\t%%V\\t%%P\\t%%A\\t%%I\\t%%O %s'%fname)
+            if err.find("Error: Cannot find workarea")>=0:
+                return False,""
+            info=out.split("\n")[1]
+            info=info.split("\t")
+            oStr="Type of the object          : "
+            if info[0]=='f' :oStr+="File"
+            if info[0]=='p' :oStr+="Package"
+            if info[0]=='d' :oStr+="Directory"
+            if info[0]=='s' :oStr+="Symbolic Link"
+            if info[0]=='F' :oStr+="Reference File"
+            if info[0]=='P' :oStr+="Reference Package"
+            if info[0]=='D' :oStr+="Reference Dir"
+            if info[0]=='S' :oStr+="Reference Symbolic Link"
+
+            oStr+="\nRevision number             : %s"%info[6]
+            if info[4]=='-' :oStr+="\n                              Workarea has  the latest revision"
+            if info[4]=='N' :oStr+="\n                              Not using latest revision i.e a newer revision exists in the repository"
+
+            if info[5]=='-' :oStr+="\n                              Current revision of object matches RSO."
+            if info[5]=='R' :oStr+="\n                              Current revision of object DOES NOT match the RSO"
+            oStr+="\nPath of object              : %s"%info[7]
+            oStr+="\nAuthor name                 : %s"%info[8]
+
+            oStr+="\nCheck in/out time           : %s"%info[9]
+            oStr+="\nCheck in/out log            : %s"%info[10]
+
+            oStr+="\nState of the object         : "
+            if info[1]=='O' :oStr+="Checked out"
+            if info[1]=='-' :oStr+="Checked In"
+            if info[1]=='W' :oStr+="Checked out without Lock"
+            if info[1]=='N' :oStr+="Unpopulated"
+            if info[1]=='X' :oStr+="Read access denied"
+            if info[1]=='?' :oStr+="Unmanaged"
+
+            oStr+="\nChange status of the object : "
+            if info[2]=='M' :oStr+="Modified in this workarea"
+            if info[2]=='!' :oStr+="Deleted in workarea"
+            if info[2]=='-' :oStr+="Not modified"
+            if info[2]=='?' :oStr+="Not applicable"
+
+            oStr+="\nLock status of the object   : "
+            if info[3]=='L' :oStr+="Locked"
+            if info[3]=='-' :oStr+="Not locked"
+            if info[3]=='?' :oStr+="Not applicable"
+
+            return True, oStr
+
+        def getRevInfo(fname):
+            sos,soslog=getSosInfo(fname)
+            if sos:
+                return "File under SOS control.\n"+soslog
+            svn,svnlog=getSvnInfo(fname)
+            if svn:
+                return "File under SVN control.\n"+svnlog
+            oStr="File is NOT under version control!\n"
+
+            t = os.path.getmtime(fname)
+            oStr+="Modification time : %s\n"%datetime.datetime.fromtimestamp(t)
+            oStr+="File Size         : %s\n"%os.path.getsize(fname)
+            oStr+="MD5 hass          : %s\n"%hashlib.md5(open(fname, 'rb').read()).hexdigest()
+
+            return oStr
+
+        def addLine(header,s,align="left"):
+            if align=="left":
+                line=s+" "*(HLEN-4-len(s))
+                header+=" * %s *\n"%line
+            if align=="center":
+                slen=HLEN-4-len(s)
+                sleft=int(slen/2)
+                sright = slen-sleft
+                line=(" "*sleft)+ s +(" "*sright)
+                header+=" * %s *\n"%line
+            return header
+
+        def getTmrgRev():
+            ver = tmrg_version()
+            if ver=="trunk":
+                out,err=runCommand("svnversion %s"%sys.argv[0])
+                ver+=" (svnversion: %s)"%out.rstrip()
+            return ver
+        header=addLine(header,"! THIS FILE WAS AUTO-GENERATED BY TMRG TOOL !",align="center")
+        header=addLine(header,"! DO NOT EDIT IT MANUALLY !",align="center")
+        header=addLine(header,"")
+        header=addLine(header,"file    : %s"%(fout))
+        header=addLine(header,"")
+        header=addLine(header,"user    : %s"%(getpass.getuser()))
+        header=addLine(header,"host    : %s"%(socket.gethostname()))
+        header=addLine(header,"date    : %s"%(time.strftime("%d/%m/%Y %H:%M:%S")))
+        header=addLine(header,"")
+        header=addLine(header,"workdir : %s"%os.getcwd())
+        header=addLine(header,"cmd     : %s"%(" ".join(sys.argv)))
+
+        header=addLine(header,"tmrg rev: %s"%(getTmrgRev()))
+
+        header=addLine(header,"")
+        header=addLine(header,"src file: %s"%fname)
+        for l in getRevInfo(fname).split("\n"):
+            header=addLine(header,"          "+l)
+        header=addLine(header,"")
+        header+=" "+("*"*HLEN)+"/\n"
+        return header
+
     def triplicate(self):
         """ Triplicate the design
         :return:
@@ -1380,6 +1505,9 @@ class TMR(VerilogElaborator):
             self.logger.debug("Saving result of triplication to %s"%foutnew)
 
             f=open(foutnew,"w")
+            if self.options.header and self.config.getboolean("tmrg","add_header"):
+                header=self.getHeader(fname,fout)
+                f.write(header)
             f.write(self.vf.format(tmrTokens).replace("\t"," "*self.config.getint("tmrg","spaces")))
             f.close()
 
@@ -1491,6 +1619,7 @@ def main():
 #    parser.add_option("",    "--diff",             dest="showdiff",     action="store_true",  default=False, help="Show diff")
     tmrGroup.add_option("-c",  "--config",           dest="config",       action="append",   default=[], help="Load config file")
     tmrGroup.add_option("-w",  "--constrain",        dest="constrain",    action="append",   default=[], help="Load config file")
+    tmrGroup.add_option("",  "--no-header",          dest="header",       action="store_false",   default=True, help="Do not append  information headder to triplicated file.")
     tmrGroup.add_option("",  "--sdc-generate",       dest="sdc_generate",   action="store_true",   default=False, help="Generate SDC file for Design Compiler")
     tmrGroup.add_option("",  "--sdc-headers",        dest="sdc_headers",    action="store_true",   default=False, help="Append SDC headers")
     tmrGroup.add_option("",  "--sdc-file-name",      dest="sdc_fileName",    default="",   help="Specify SDC filename")
